--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,5 @@
     <string name="dialog_insert_image_address_hint">Input image address</string>
     <string name="dialog_insert_image_description_hint">Insert image description.(optional)</string>
 
+    <string name="list_head_discover_more">Discover more interested people</string>
 </resources>
